--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         background-position:top; 
         background-repeat:initial; 
         height: 100vh; 
-        padding: 0;    /* 重置页面的内边距 */
+        padding: 0;  
         overflow-x: hidden;
         margin: 0; 
         
