--- a/Welcome!.html
+++ b/Welcome!.html
@@ -156,7 +156,7 @@ audio::-webkit-media-controls {
   }
 </style>
 
-<a href="website.html">
+<a href="index.html">
   <img src="homepage1.gif" alt="undo" class="undo">
   
 </a>
