--- a/website3.html
+++ b/website3.html
@@ -244,7 +244,7 @@
   
   </style>
   
-  <img src="gif2.gif" alt="gif1" class="gif1">
+  <img src="gif2.GIF" alt="gif1" class="gif1">
 
   <style>
 .gameboy {
