--- a/Welcome!.html
+++ b/Welcome!.html
@@ -45,11 +45,10 @@ audio::-webkit-media-controls {
 }
 
 
-/* 给按钮添加动画效果 */
 .custom-play-button {
   position: absolute;
-  width: 50px; /* 自定义按钮宽度 */
-  height: 50px; /* 自定义按钮高度 */
+  width: 50px; 
+  height: 50px; 
   background: url('audio.png') no-repeat center center; 
   background-size: cover;
   cursor: pointer;
@@ -201,7 +200,7 @@ audio::-webkit-media-controls {
 
 
 <a href="website2.html">
-  <img src="icon1.png" alt="icon1" class="icon1">
+  <img src="icon1.png" alt="icon2" class="icon1">
 </a>
 
 <style>
@@ -225,5 +224,5 @@ audio::-webkit-media-controls {
 
 
 <a href="website3.html">
-  <img src="camera.png" alt="icon2" class="icon2">
+  <img src="camera.png" alt="icon1" class="icon2">
 </a>
