--- a/website2.html
+++ b/website2.html
@@ -852,8 +852,24 @@ audio::-webkit-media-controls {
   
     </style>
     
-  
   <img class="text3" src="text3.png" alt="text3">
 
   <style>
+
+      <style>
+    .text4 {
+        position: absolute;
+        font-weight: bold;
+        font-family: Arial, Helvetica, sans-serif;
+        font-style: italic;
+        font-size: 16px; 
+        color: #ee9042;
+        margin-top: 5720px;
+        margin-left: 160px;
+    }
+    </style>
+
+<div class="text4">
+  The future we've looked to in <br>the past hasn't, or will never, <br>arrive. But all of these boldest, <br>most optimistic fantasies have <br>become trends, styles, cultures, <br>and part of who we are.
+    </div>
 
