--- a/Welcome!.html
+++ b/Welcome!.html
@@ -179,10 +179,13 @@ audio::-webkit-media-controls {
 
 <img class="face" src="./Face.png" alt="face" />
 
+
+
+
 <style>
   .icon1 {
     position: absolute;
-      top: 300px;
+      top: 320px;
       left: 400px;
       width: 200px;
       height: auto;
@@ -190,23 +193,25 @@ audio::-webkit-media-controls {
   }
 </style>
 
+ 
+
 <style>
   .icon1:hover {
     cursor: pointer;
     opacity: 0.8;
     transform: translateY(-5px);
+    transition: transform 0.3s ease; 
   }
 </style>
 
-
-<a href="website2.html">
-  <img src="icon1.png" alt="icon2" class="icon1">
+<a href="website3.html">
+  <img src="camera.png" alt="icon1" class="icon1">
 </a>
 
 <style>
   .icon2 {
     position: absolute;
-      top: 320px;
+      top: 300px;
       left: 800px;
       width: 200px;
       height: auto;
@@ -219,10 +224,10 @@ audio::-webkit-media-controls {
     cursor: pointer;
     opacity: 0.8;
     transform: translateY(-5px);
+
   }
 </style>
 
-
-<a href="website3.html">
-  <img src="camera.png" alt="icon1" class="icon2">
+<a href="website2.html">
+  <img src="icon1.png" alt="icon2" class="icon2">
 </a>
