--- a/website2.html
+++ b/website2.html
@@ -839,7 +839,8 @@ audio::-webkit-media-controls {
     
   <img class="text3" src="text3.png" alt="text3">
 
-      <style>
+     
+    <style>
     .text4 {
         position: absolute;
         font-weight: bold;
@@ -847,12 +848,13 @@ audio::-webkit-media-controls {
         font-style: italic;
         font-size: 16px; 
         color: #ee9042;
-        margin-top: 5720px;
+        margin-top: 5700px;
         margin-left: 160px;
     }
     </style>
 
 <div class="text4">
-  The future we've looked to in <br>the past hasn't, or will never, <br>arrive. But all of these boldest, <br>most optimistic fantasies have <br>become trends, styles, cultures, <br>and part of who we are.
+  The future we've looked to in <br>the past hasn't, or might never, <br>arrive. But all of these boldest, <br>most optimistic fantasies have <br>become trends, styles, cultures, <br>and part of who we are.<br>
+Retrofuturism is an ever-changing <br>constant: The fashion industry <br>will forever look forward, and <br>back, to understand its role in <br>the current cultural moment. 
     </div>
 
