--- a/website.html
+++ b/website.html
@@ -86,15 +86,20 @@
     }
 
 
-    #enterButton {
+      #enterButton {
       font-family: 'Courier New', Courier, monospace;
       background-color: #3446c8;
       color: white;
       padding: 10px 20px;
       cursor: pointer;
+      background: linear-gradient(to bottom, #6e77c0, #3446c8, #6e77c0);
       border: none;
       border-radius: 5px;
       z-index: 4;
+    }
+      #enterButton:hover {
+      filter: brightness(0.9);
+    
     }
   </style>
 </head>
