--- a/website3.html
+++ b/website3.html
@@ -312,7 +312,8 @@
           z-index: 1;
         }
         </style>
-        
+  
+         <a href="https://aesthetics.fandom.com/wiki/Frutiger_Aero"target="_blank">
         <img src="gif4.gif" alt="gif4" class="gif4">
 
         
