--- a/website.html
+++ b/website.html
@@ -92,7 +92,7 @@
       color: white;
       padding: 10px 20px;
       cursor: pointer;
-      background: linear-gradient(to bottom, #6e77c0, #3446c8, #6e77c0);
+      background: linear-gradient(to bottom, #838ac0, #3446c8, #838ac0);
       border: none;
       border-radius: 5px;
       z-index: 4;
