--- a/website.html
+++ b/website.html
@@ -92,7 +92,8 @@
       color: white;
       padding: 10px 20px;
       cursor: pointer;
-      background: linear-gradient(to bottom, #838ac0, #3446c8, #838ac0);
+      background-image: url('buttonimage.png'); 
+      background-size:contain;
       border: none;
       border-radius: 5px;
       z-index: 4;
