--- a/website.html
+++ b/website.html
@@ -88,8 +88,7 @@
       color: white;
       padding: 10px 20px;
       cursor: pointer;
-      background-image: url('buttonimage.png'); 
-      background-size:contain;
+      background: linear-gradient(to bottom, #6e77c0, #3446c8);
       border: none;
       border-radius: 5px;
       z-index: 4;
