--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 
     #enterButton {
       font-family: 'Courier New', Courier, monospace;
-      background-color: #3446c8;
+      background-image: url('buttonimage.png'); 
+      background-size:contain; 
       color: white;
       padding: 10px 20px;
       cursor: pointer;
