--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
       border-radius: 5px;
       z-index: 4;
     }
+
+     #enterButton:hover {
+      filter: brightness(0.9);
+    }
   </style>
 </head>
 <body>
