--- a/website3.html
+++ b/website3.html
@@ -313,7 +313,7 @@
         }
         </style>
   
-         <a href="https://aesthetics.fandom.com/wiki/Frutiger_Aero"target="_blank">
+         <a href="https://www.dazeddigital.com/life-culture/article/58103/1/what-is-frutiger-aero-aesthetic-tiktok-msn-messenger-windows-vista-noughties"target="_blank">
         <img src="gif4.gif" alt="gif4" class="gif4">
 
         
